--- a/src/layouts/DeviceFrame.css
+++ b/src/layouts/DeviceFrame.css
@@ -44,14 +44,15 @@
 
 header.bar {
   position: relative;
-  z-index: 5;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 22px 24px 0;
+  z-index: 10;
+  height: 0;
+  padding: 0;
 }
 
 .crest {
+  position: absolute;
+  top: 22px;
+  left: 24px;
   width: 34px;
   height: 34px;
   border-radius: 50%;
@@ -67,6 +68,9 @@ header.bar {
 }
 
 .hamburger {
+  position: absolute;
+  top: 22px;
+  right: 24px;
   width: 40px;
   height: 40px;
   border-radius: 50%;
