--- a/src/screens/Home.css
+++ b/src/screens/Home.css
@@ -2,7 +2,7 @@
   position: relative;
   z-index: 5;
   text-align: center;
-  padding: 64px 32px 18px;
+  padding: 96px 32px 18px;
 }
 
 .eyebrow {
